# surrealdb

./: .gitignore  .gitmodules  Cargo.toml  Makefile
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/doc/: update.rs  upsert.rs
core/src/idx/planner/: executor.rs  iterators.rs
core/src/kvs/: ds.rs
core/src/rpc/: rpc_context.rs
lib/: Cargo.toml
lib/src/api/engine/: mod.rs
lib/src/api/engine/any/: mod.rs  native.rs  wasm.rs
lib/src/api/engine/local/: mod.rs  native.rs
lib/src/api/engine/remote/ws/: native.rs  wasm.rs
lib/src/api/opt/: strict.rs
lib/src/api/opt/endpoint/: mod.rs  redb.rs
lib/src/err/: mod.rs
lib/src/kvs/: ds.rs  mod.rs  tx.rs
lib/src/kvs/redb/: mod.rs
lib/tests/: api.rs  helpers.rs  soak.rs
src/cli/validator/: mod.rs
src/dbs/: mod.rs
src/net/: health.rs  import.rs  ml.rs
tests/common/: tests.rs
tests/runners/: Cargo.toml
tests/runners/src/: main.rs
tests/runners/src/server/: config.rs  mod.rs  runner.rs  utils.rs
tests/runners/src/server/adapters/: internal.rs
