[package]
name = "surrealdb-runners"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
rand = "0.8.5"
rcgen = "0.12.1"
cargo_metadata = "0.18.1"
nix = { version = "0.27.1", features = ["signal", "user"] }
tracing = "0.1.40"
